--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
   padding: 0 10px;
   margin: 0 auto;
   text-align: center;
-  background-color: thistle;
+  background-color: rgb(250, 245, 250);
   border-radius: 10px;
   box-sizing: content-box;
 }
@@ -29,17 +29,20 @@
   width: 80%;
   border: 0;
   border-bottom: 1px solid gray;
+  border-radius: 30px;
   font-size: 1rem;
-  padding: 4px 0;
-  background: transparent;
+  padding: 0 20px;
+  background: white;
+  box-shadow: 1px 1px 10px rgb(136, 133, 133);
 }
 
 #searchButton {
   outline: none;
-  padding: 5px 10px;
+  padding: 10px;
   background-color: rgb(152, 28, 168);
   color: white;
   cursor: pointer;
+  box-shadow: 1px 1px 10px rgb(136, 133, 133);
 }
 
 #searchButton:disabled {
@@ -69,6 +72,8 @@
 
 .details,
 #countData {
+  display: flex;
+  align-items: center;
   text-align: left;
 }
 
@@ -81,4 +86,22 @@ img {
 .usersEach {
   display: flex;
   align-items: center;
+}
+
+.usersEach {
+  border: 1px ridge gray;
+  box-shadow: 2px 2px 10px rgb(43, 42, 42);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 5px;
+  background-color: white;
+}
+
+.parag {
+  border: 1px ridge gray;
+  box-shadow: 2px 2px 10px rgb(43, 42, 42);
+  padding: 20px;
+  border-radius: 10px;
+  margin: 5px;
+  background-color: white;
 }
